chore: add detectable object type BP_TROTTOIRS
